--- a/sdk/cosmos/azure-cosmos-kafka-connect/pom.xml
+++ b/sdk/cosmos/azure-cosmos-kafka-connect/pom.xml
@@ -335,7 +335,7 @@ Licensed under the MIT License.
       </plugin>
       <plugin>
         <groupId>io.confluent</groupId>
-        <version>0.12.0</version> <!-- {x-version-update;io.confluent:kafka-connect-maven-plugin;external_dependency} -->
+        <version>0.12.0</version> <!-- {x-version-update;cosmos_io.confluent:kafka-connect-maven-plugin;external_dependency} -->
         <artifactId>kafka-connect-maven-plugin</artifactId>
         <executions>
           <execution>
