--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
     <module>sdk/devspaces</module>
     <module>sdk/devtestlabs</module>
     <module>sdk/digitaltwins</module>
+    <module>sdk/documentintelligence</module>
     <module>sdk/dnsresolver</module>
     <module>sdk/dynatrace</module>
     <module>sdk/easm</module>
