fix jackson err

--- a/sdk/spring/spring-cloud-azure-autoconfigure/pom.xml
+++ b/sdk/spring/spring-cloud-azure-autoconfigure/pom.xml
@@ -300,6 +300,13 @@
       <optional>true</optional>
     </dependency>
 
+    <!-- Add to fix jackson err -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.15.3</version> <!-- {x-version-update;com.fasterxml.jackson.core:jackson-databind;external_dependency} -->
+    </dependency>
+
     <!-- TEST-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
