--- a/sdk/identity/azure-identity/pom.xml
+++ b/sdk/identity/azure-identity/pom.xml
@@ -95,7 +95,7 @@
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
-      <version>5.0.1</version> <!-- {x-version-update;redis.clients:jedis;external_dependency} -->
+      <version>4.3.2</version> <!-- {x-version-update;sample_redis.clients:jedis;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
