--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-jms-passwordless.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-jms-passwordless.yml
@@ -2,7 +2,7 @@ spring:
   jms:
     servicebus:
       enabled: true
-      pricing-tier: premium
+      pricing-tier: standard
       passwordless-enabled: true
       namespace: ${AZURE_SERVICE_BUS_NAMESPACE}
 
