--- a/sdk/spring/tests.yml
+++ b/sdk/spring/tests.yml
@@ -14,7 +14,7 @@ stages:
           SubscriptionConfiguration: $(sub-config-cn-test-resources)
           Location: "chinanorth3"
       TestResourceDirectories:
-        - spring/spring-cloud-azure-integration-tests/test-resources/common
+#        - spring/spring-cloud-azure-integration-tests/test-resources/common
 #        - spring/spring-cloud-azure-integration-tests/test-resources/jdbc/mysql
 #        - spring/spring-cloud-azure-integration-tests/test-resources/appconfiguration
 #        - spring/spring-cloud-azure-integration-tests/test-resources/cosmos
