--- a/sdk/spring/tests.yml
+++ b/sdk/spring/tests.yml
@@ -14,15 +14,15 @@ stages:
           SubscriptionConfiguration: $(sub-config-cn-test-resources)
           Location: "chinanorth3"
       TestResourceDirectories:
-#        - spring/spring-cloud-azure-integration-tests/test-resources/common
-#        - spring/spring-cloud-azure-integration-tests/test-resources/jdbc/mysql
-#        - spring/spring-cloud-azure-integration-tests/test-resources/appconfiguration
-#        - spring/spring-cloud-azure-integration-tests/test-resources/cosmos
+        - spring/spring-cloud-azure-integration-tests/test-resources/common
+        - spring/spring-cloud-azure-integration-tests/test-resources/jdbc/mysql
+        - spring/spring-cloud-azure-integration-tests/test-resources/appconfiguration
+        - spring/spring-cloud-azure-integration-tests/test-resources/cosmos
         - spring/spring-cloud-azure-integration-tests/test-resources/servicebus
-#        - spring/spring-cloud-azure-integration-tests/test-resources/eventhubs
-#        - spring/spring-cloud-azure-integration-tests/test-resources/storage
-#        - spring/spring-cloud-azure-integration-tests/test-resources/keyvault
-#        - spring/spring-cloud-azure-integration-tests/test-resources/dummy
+        - spring/spring-cloud-azure-integration-tests/test-resources/eventhubs
+        - spring/spring-cloud-azure-integration-tests/test-resources/storage
+        - spring/spring-cloud-azure-integration-tests/test-resources/keyvault
+        - spring/spring-cloud-azure-integration-tests/test-resources/dummy
       Artifacts:
         - name: spring-cloud-azure-integration-tests
           groupId: com.azure.spring
