--- a/sdk/spring/spring-cloud-azure-starter-servicebus-jms/pom.xml
+++ b/sdk/spring/spring-cloud-azure-starter-servicebus-jms/pom.xml
@@ -98,6 +98,11 @@
       <version>5.3.30</version> <!-- {x-version-update;org.springframework:spring-jms;external_dependency} -->
     </dependency>
     <dependency>
+      <groupId>org.apache.qpid</groupId>
+      <artifactId>qpid-jms-client</artifactId>
+      <version>0.53.0</version> <!-- {x-version-update;org.apache.qpid:qpid-jms-client;external_dependency} -->
+    </dependency>
+    <dependency>
       <groupId>org.messaginghub</groupId>
       <artifactId>pooled-jms</artifactId>
       <version>1.2.5</version> <!-- {x-version-update;org.messaginghub:pooled-jms;external_dependency} -->
