--- a/sdk/appconfiguration/azure-data-appconfiguration/pom.xml
+++ b/sdk/appconfiguration/azure-data-appconfiguration/pom.xml
@@ -13,7 +13,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-data-appconfiguration</artifactId>
-  <version>1.5.0-beta.3</version> <!-- {x-version-update;com.azure:azure-data-appconfiguration;current} -->
+  <version>1.5.0</version> <!-- {x-version-update;com.azure:azure-data-appconfiguration;current} -->
 
   <name>Microsoft Azure client library for App Configuration</name>
   <description>This package contains the Microsoft Azure App Configuration client library.</description>
@@ -62,11 +62,6 @@
       <groupId>com.azure</groupId>
       <artifactId>azure-core-http-netty</artifactId>
       <version>1.13.10</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
-    </dependency>
-    <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-core-experimental</artifactId>
-      <version>1.0.0-beta.46</version> <!-- {x-version-update;com.azure:azure-core-experimental;dependency} -->
     </dependency>
     <!-- Test dependencies -->
     <dependency>
