adding two scenarios with fault injection flag

--- a/sdk/storage/azure-storage-blob-stress/Dockerfile
+++ b/sdk/storage/azure-storage-blob-stress/Dockerfile
@@ -24,8 +24,9 @@ WORKDIR /app
 COPY --from=builder /stress/sdk/storage/azure-storage-blob-stress/target .
 
 # Configure monitoring
-ARG AGENT_URL=https://github.com/microsoft/ApplicationInsights-Java/releases/download/3.4.17/applicationinsights-agent-3.4.17.jar
-ADD ${AGENT_URL} ./BOOT-INF/classes/
+#commenting these two lines temporarily
+#ARG AGENT_URL=https://github.com/microsoft/ApplicationInsights-Java/releases/download/3.4.17/applicationinsights-agent-3.4.17.jar
+#ADD ${AGENT_URL} ./BOOT-INF/classes/
 
 # This is never executed (since job yaml overrides it)
 ENTRYPOINT ["bash"]
