clean up tests and add more details to logs

--- a/sdk/storage/azure-storage-blob-stress/scenarios-matrix.yaml
+++ b/sdk/storage/azure-storage-blob-stress/scenarios-matrix.yaml
@@ -6,17 +6,17 @@ matrix:
       blobSizeBytes: 1024
       parallel: 100
       faultInjection: true
-      testTime: 18000
+      testTime: 900
       imageBuildDir: "../../.."
 
-    download-small-file-no-fi:
-      testTarget: downloadToFile
-      async: false
-      blobSizeBytes: 1024
-      parallel: 100
-      faultInjection: false
-      testTime: 18000
-      imageBuildDir: "../../.."
+#    download-small-file-no-fi:
+#      testTarget: downloadToFile
+#      async: false
+#      blobSizeBytes: 1024
+#      parallel: 100
+#      faultInjection: false
+#      testTime: 900
+#      imageBuildDir: "../../.."
 
 #    we can add new test cases here - will run in parallel
 #    download-large-file-test:
