--- a/sdk/identity/azure-identity-broker/pom.xml
+++ b/sdk/identity/azure-identity-broker/pom.xml
@@ -98,7 +98,7 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-graphics</artifactId>
-      <version>17.0.6</version> <!-- {x-include-update;org.javafx:javafx-graphics;external_dependency} -->
+      <version>17.0.6</version> <!-- {x-version-update;org.openjfx:javafx-graphics;external_dependency} -->
       <scope>compile</scope>
     </dependency>
   </dependencies>
@@ -120,7 +120,7 @@
                 <include>com.fasterxml.jackson.core:jackson-databind:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.core:jackson-databind;external_dependency} -->
                 <include>com.fasterxml.jackson.dataformat:jackson-dataformat-xml:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.dataformat:jackson-dataformat-xml;external_dependency} -->
                 <include>com.fasterxml.jackson.datatype:jackson-datatype-jsr310:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.datatype:jackson-datatype-jsr310;external_dependency} -->
-                <include>org.openjfx:javafx-graphics:[17.0.6]</include> <!-- {x-include-update;org.javafx:javafx-graphics;external_dependency} -->
+                <include>org.openjfx:javafx-graphics:[17.0.6]</include> <!-- {x-include-update;org.openjfx:javafx-graphics;external_dependency} -->
               </includes>
             </bannedDependencies>
           </rules>
