--- a/sdk/identity/azure-identity-broker/pom.xml
+++ b/sdk/identity/azure-identity-broker/pom.xml
@@ -95,12 +95,6 @@
       <version>2.13.5</version> <!-- {x-version-update;com.fasterxml.jackson.dataformat:jackson-dataformat-xml;external_dependency} -->
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-graphics</artifactId>
-      <version>17.0.6</version> <!-- {x-version-update;org.openjfx:javafx-graphics;external_dependency} -->
-      <scope>compile</scope>
-    </dependency>
   </dependencies>
 
   <build>
@@ -120,7 +114,6 @@
                 <include>com.fasterxml.jackson.core:jackson-databind:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.core:jackson-databind;external_dependency} -->
                 <include>com.fasterxml.jackson.dataformat:jackson-dataformat-xml:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.dataformat:jackson-dataformat-xml;external_dependency} -->
                 <include>com.fasterxml.jackson.datatype:jackson-datatype-jsr310:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.datatype:jackson-datatype-jsr310;external_dependency} -->
-                <include>org.openjfx:javafx-graphics:[17.0.6]</include> <!-- {x-include-update;org.openjfx:javafx-graphics;external_dependency} -->
               </includes>
             </bannedDependencies>
           </rules>
@@ -155,6 +148,15 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.azure.tools</groupId>
+        <artifactId>codesnippet-maven-plugin</artifactId>
+        <version>1.0.0-beta.8</version> <!-- {x-version-update;com.azure.tools:codesnippet-maven-plugin;external_dependency} -->
+        <configuration>
+          <codesnippetRootDirectory>../azure-identity-broker-samples/src/samples/java</codesnippetRootDirectory>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
