--- a/sdk/identity/azure-identity-broker/pom.xml
+++ b/sdk/identity/azure-identity-broker/pom.xml
@@ -148,6 +148,15 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.azure.tools</groupId>
+        <artifactId>codesnippet-maven-plugin</artifactId>
+        <version>1.0.0-beta.8</version> <!-- {x-version-update;com.azure.tools:codesnippet-maven-plugin;external_dependency} -->
+        <configuration>
+          <codesnippetRootDirectory>../azure-identity-broker-samples/src/samples/java</codesnippetRootDirectory>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
