--- a/sdk/identity/azure-identity-broker/pom.xml
+++ b/sdk/identity/azure-identity-broker/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-identity-broker</artifactId>
-  <version>1.0.0-beta.2</version><!-- {x-version-update;com.azure:azure-identity-broker;current} -->
+  <version>1.0.0</version><!-- {x-version-update;com.azure:azure-identity-broker;current} -->
 
   <name>Microsoft Azure Identity Brokered Authentication Library</name>
   <description>This module contains brokered authentication extensions for Microsoft Azure Identity.</description>
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-identity</artifactId>
-      <version>1.11.0-beta.3</version> <!-- {x-version-update;com.azure:azure-identity;current} -->
+      <version>1.11.0</version> <!-- {x-version-update;com.azure:azure-identity;current} -->
     </dependency>
     <dependency>
       <groupId>com.microsoft.azure</groupId>
