--- a/sdk/boms/ci.yml
+++ b/sdk/boms/ci.yml
@@ -1,25 +1,8 @@
 # NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
 
-trigger:
-  branches:
-    include:
-      - main
-      - hotfix/*
-      - release/*
-  paths:
-    include:
-      - sdk/boms/
+trigger: none
 
-pr:
-  branches:
-    include:
-      - main
-      - feature/*
-      - hotfix/*
-      - release/*
-  paths:
-    include:
-      - sdk/boms/
+pr: none
 
 parameters:
   - name: release_azuresdkbom
