--- a/sdk/generic-sdk-core/generic-core/src/main/resources/META-INF/native-image.com.generic.generic-core/resource-config.json
+++ b/sdk/generic-sdk-core/generic-core/src/main/resources/META-INF/native-image.com.generic.generic-core/resource-config.json
@@ -2,7 +2,7 @@
   "resources": {
     "includes": [
       {
-        "pattern": "META-INF/services/com.generic.core.http.HttpClientProvider"
+        "pattern": "META-INF/services/com.generic.core.http.client.HttpClientProvider"
       },
       {
         "pattern": "\\QMETA-INF/services/jdk.vm.ci.hotspot.HotSpotJVMCIBackendFactory\\E"
