--- a/eng/pipelines/aggregate-reports.yml
+++ b/eng/pipelines/aggregate-reports.yml
@@ -79,6 +79,14 @@ stages:
               arguments: '--groups com.azure --type javadoc --exclude-project-list com.azure:azure-cosmos-benchmark,com.azure:azure-cosmos-dotnet-benchmark,com.azure:azure-messaging-servicebus-stress,com.azure:azure-messaging-eventhubs-stress'
               workingDirectory: '$(System.DefaultWorkingDirectory)'
 
+          # Generate the CG manifest for Maven plugins.
+          - task: PythonScript@0
+            displayName: 'Generate Component Governance Maven plugins manifest'
+            inputs:
+              scriptPath: 'eng/scripts/generate_plugin_cgmanifest.py'
+              arguments: '--maven_local_repo $(MAVEN_CACHE_FOLDER)'
+              workingDirectory: '$(System.DefaultWorkingDirectory)'
+
           - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
             # ComponentGovernance is currently unable to run on pull requests of public projects. Running on non-PR
             # builds should be sufficient.
