--- a/sdk/core/azure-json/pom.xml
+++ b/sdk/core/azure-json/pom.xml
@@ -192,6 +192,7 @@
             </executions>
 
             <configuration>
+              <skip>${shade.skip}</skip>
               <createSourcesJar>true</createSourcesJar>
               <shadeSourcesContent>true</shadeSourcesContent>
 
