--- a/sdk/cosmos/azure-cosmos-kafka-connect/pom.xml
+++ b/sdk/cosmos/azure-cosmos-kafka-connect/pom.xml
@@ -207,6 +207,7 @@ Licensed under the MIT License.
               <goal>shade</goal>
             </goals>
             <configuration>
+              <skip>${shade.skip}</skip>
               <filters>
                 <filter>
                   <artifact>*:*:*:*</artifact>
