--- a/sdk/cosmos/azure-cosmos-spark_3_2-12/pom.xml
+++ b/sdk/cosmos/azure-cosmos-spark_3_2-12/pom.xml
@@ -401,6 +401,7 @@
                   <goal>shade</goal>
                 </goals>
                 <configuration>
+                  <skip>${shade.skip}</skip>
                   <relocations>
                     <relocation>
                       <pattern>com.azure</pattern>
