CodeGen from PR 26650 in Azure/azure-rest-api-specs Document Intelligence 2023-10-31-preview (#26650)
* Add DocumentIntelligence 2023-10-31-preview as update to FormRecognizer 2023-07-31

* Update cSpell.

* Update cSpell.

* Update tspconfig.yaml

* .NET changes

* Revert ".NET changes"

This reverts commit 85270d5cbe4186e229d4849c6a34e39673d2b3e1.

* .NET changes

* Updated .NET config

* Revert "Updated .NET config"

This reverts commit c7e97155b614e1f769e33f7c57adc0780e23aec5.

---------

Co-authored-by: Harsha Nalluru <sanallur@microsoft.com>
Co-authored-by: Caio Saldanha <camaiaor@microsoft.com>

--- a/sdk/documentintelligence/azure-ai-documentintelligence/tsp-location.yaml
+++ b/sdk/documentintelligence/azure-ai-documentintelligence/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/cognitiveservices/DocumentIntelligence
-commit: a3ead5890e6c6b2b41a2c7077c21efcdc406ea52
-repo: Azure/azure-rest-api-specs-pr
+directory: specification/ai/DocumentIntelligence
+commit: 78eac0bd58633028293cb1ec1709baa200bed9e2
+repo: Azure/azure-rest-api-specs
+additionalDirectories: []
+
