--- a/sdk/documentintelligence/azure-ai-documentintelligence/pom.xml
+++ b/sdk/documentintelligence/azure-ai-documentintelligence/pom.xml
@@ -16,7 +16,7 @@
   <version>1.0.0-beta.1</version> <!-- {x-version-update;com.azure:azure-ai-documentintelligence;current} -->
 
   <name>Microsoft Azure client library for Document Intelligence</name>
-  <description>This package contains the Microsoft Azure Cognitive Services Document Intelligence SDK.</description>
+  <description>This package contains the Microsoft Azure AI Document Intelligence SDK.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
   <distributionManagement>
