--- a/sdk/spring/azure-spring-data-cosmos/pom.xml
+++ b/sdk/spring/azure-spring-data-cosmos/pom.xml
@@ -261,6 +261,13 @@
         </executions>
       </plugin>
     </plugins>
+
+    <resources>
+      <resource>
+        <filtering>true</filtering>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
   </build>
 
   <profiles>
